feat(resource-check): add service/method params
