# arborist/engine_api.go
@@ -24,6 +24,7 @@ package arborist
 import (
 	"encoding/json"
 	"errors"
+	"fmt"
 	"net/http"
 
 	"github.com/golang/glog"
@@ -113,27 +114,64 @@ func (response *Response) Prettify() *Response {
 
 // Handlers for auth requests
 
-func (engine *Engine) HandleAuthProxy(policies []string, path string) *Response {
-	resources, err := engine.listAuthedResources(policies)
-	if err != nil {
+func (engine *Engine) HandleAuthProxy(policyIDs []string, resourcePath string, service string, method string) *Response {
+	policies := make(map[*Policy]struct{}, len(policyIDs))
+	for i := range policyIDs {
+		p, exists := engine.policies[policyIDs[i]]
+		policies[p] = struct{}{}
+		if !exists {
+			err := fmt.Errorf("policy does not exist: %s", policyIDs[i])
+			return &Response{
+				ExternalError: err,
+				Code:          http.StatusBadRequest,
+			}
+		}
+	}
+	resource, exists := engine.resources[resourcePath]
+	if !exists {
+		err := fmt.Errorf("resource does not exist: %s", resourcePath)
 		return &Response{
 			ExternalError: err,
 			Code:          http.StatusBadRequest,
 		}
 	}
-	authed := false
-	for _, resource := range resources {
-		if resource.path == path {
-			authed = true
-			break
-		}
+	action := &Action{Service: service, Method: method}
+	request := &AuthRequest{
+		policies:    policies,
+		resource:    resource,
+		action:      action,
+		constraints: nil,
 	}
-	if authed {
+	authResponse := engine.HandleAuthRequest(request)
+	if authResponse.auth {
 		return &Response{Bytes: []byte{}, Code: http.StatusOK}
 	} else {
 		err := errors.New("Unauthorized: user does not have access to this resource")
 		return &Response{ExternalError: err, Code: http.StatusForbidden}
 	}
+
+	/*
+		resources, err := engine.listAuthedResources(policyIDs)
+		if err != nil {
+			return &Response{
+				ExternalError: err,
+				Code:          http.StatusBadRequest,
+			}
+		}
+		authed := false
+		for _, resource := range resources {
+			if resource.path == resourcePath {
+				authed = true
+				break
+			}
+		}
+		if authed {
+			return &Response{Bytes: []byte{}, Code: http.StatusOK}
+		} else {
+			err := errors.New("Unauthorized: user does not have access to this resource")
+			return &Response{ExternalError: err, Code: http.StatusForbidden}
+		}
+	*/
 }
 
 func (engine *Engine) HandleAuthRequest(request *AuthRequest) AuthResponse {
